# fastapi_async

./: .env  .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: f64aa7778204_database_creation.py
src/: config.py  database.py  main.py  models.py  schemas.py
src/auth/: authentication.py  dependencies.py  schemas.py  utils.py
src/users/: models.py  schemas.py  user.py
